[gd_scene load_steps=3 format=3 uid="uid://bsvx18ydn6p5p"]

[ext_resource type="Script" path="res://Calculator with Functions.gd" id="1_gmn1v"]

[sub_resource type="LabelSettings" id="LabelSettings_u2g5u"]
font_size = 32

[node name="Calculator with Functions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gmn1v")

[node name="btnexit" type="Button" parent="."]
layout_mode = 0
offset_left = 875.0
offset_top = 506.0
offset_right = 1032.0
offset_bottom = 581.0
text = "EXIT
"

[node name="btnclear" type="Button" parent="."]
layout_mode = 0
offset_left = 874.0
offset_top = 404.0
offset_right = 1031.0
offset_bottom = 479.0
text = "CLEAR"

[node name="btnadd" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.015
offset_left = 828.0
offset_top = 116.0
offset_right = 905.0
offset_bottom = 173.28
text = "+"

[node name="btndiv" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.015
offset_left = 929.0
offset_top = 198.0
offset_right = 1006.0
offset_bottom = 255.28
text = "/"

[node name="btn5" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.015
offset_left = 1035.0
offset_top = 117.0
offset_right = 1112.0
offset_bottom = 174.28
text = "="

[node name="btnmod" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.015
offset_left = 1035.0
offset_top = 198.0
offset_right = 1112.0
offset_bottom = 255.28
text = "MOD"

[node name="btnsub" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.015
offset_left = 931.0
offset_top = 118.0
offset_right = 1008.0
offset_bottom = 175.28
text = "-"

[node name="btnmult" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.015
offset_left = 830.0
offset_top = 198.0
offset_right = 907.0
offset_bottom = 255.28
text = "*"

[node name="Num1" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 226.0
offset_top = 92.0
offset_right = 662.0
offset_bottom = 194.0

[node name="Num2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 224.0
offset_top = 274.0
offset_right = 660.0
offset_bottom = 376.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 41.0
offset_top = 117.0
offset_right = 218.0
offset_bottom = 181.0
text = "Number 1:"
label_settings = SubResource("LabelSettings_u2g5u")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 43.0
offset_top = 301.0
offset_right = 220.0
offset_bottom = 365.0
text = "Number 2:"
label_settings = SubResource("LabelSettings_u2g5u")

[node name="lblOperation" type="Label" parent="."]
layout_mode = 0
offset_left = 91.0
offset_top = 411.0
offset_right = 787.0
offset_bottom = 623.0
text = "."
label_settings = SubResource("LabelSettings_u2g5u")

[connection signal="pressed" from="btnexit" to="." method="_on_btnexit_pressed"]
[connection signal="pressed" from="btnclear" to="." method="_on_btnclear_pressed"]
[connection signal="pressed" from="btnadd" to="." method="_on_btnadd_pressed"]
[connection signal="pressed" from="btndiv" to="." method="_on_btndiv_pressed"]
[connection signal="pressed" from="btn5" to="." method="_on_btn_5_pressed"]
[connection signal="pressed" from="btnmod" to="." method="_on_btnmod_pressed"]
[connection signal="pressed" from="btnsub" to="." method="_on_btnsub_pressed"]
[connection signal="pressed" from="btnmult" to="." method="_on_btnmul_pressed"]
